[package]
name = "journal_gateway"
version = "0.2.1"
license = "MIT"
authors = ["Juhasz Sandor <blackghost1987@gmail.com>"]
repository = "https://github.com/endticket/journal-gateway-rs"
description = "An HTTP client for getting Journal entries from a systemd-journal-gatewayd server"
exclude = [ "tests/*" ]

[badges]
circle-ci = { repository = "endticket/journal-gateway-rs", branch = "master" }

[dependencies]
url = "1.4.1"
hyper = "0.10.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
error-chain = "0.10.0"
